Fixes
- `Room::get()` now properly returns `null` when the room with provided ID does not exist.
- `Message::create()` no longer produces recursive data.
- Fixed database creation failing at trying to drop a nonexistent database when setting up for the first time.
- Fixed timestamp definitions not working on older XAMPP versions.
- Fixed the scrollbar on the page being visible even when the content did not overflow.

--- a/wpr_project/style.css
+++ b/wpr_project/style.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
     /*font-size: 150%;*/
     /*font-weight: bold;*/
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #main #line {
